--- a/frontend/src/app/views/root-profile/root-profile.component.scss
+++ b/frontend/src/app/views/root-profile/root-profile.component.scss
@@ -566,7 +566,7 @@ button[disabled] {
     padding: 6px 16px;
     align-items: center;
     border-radius: 6px;
-    border: 1px solid var(--color-secondary);
+    border: 1px solid var(--color-primary);
     flex-shrink: 0;
 
     i,
