--- a/frontend/src/app/views/user-profile/user-profile.component.scss
+++ b/frontend/src/app/views/user-profile/user-profile.component.scss
@@ -165,7 +165,7 @@ form {
             padding: 6px 16px;
             align-items: center;
             border-radius: 6px;
-            border: 1px solid var(--color-secondary);
+            border: 1px solid var(--color-primary);
 
             i,
             ::ng-deep svg {
@@ -867,7 +867,7 @@ a[disabled="true"] {
         margin-left: 10px;
         background-color: var(--guardian-background, #ffffff);
         height: 40px;
-        border: 1px solid var(--color-secondary);
+        border: 1px solid var(--color-primary);
         border-radius: 8px;
     }
 }
